# samse-expense

./: .env.example  .gitignore  README.md  analyze.py  app.py  pyproject.toml
demo_data/: expenses.csv  gen_expenses.py
expense/: analyzer.py  loader.py  reporter.py
samse_expense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analyzer.py  test_loader.py
